--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
-name: generate animation
+name: generate snake
 
 on:
+  # run automatically every 6 hours
   schedule:
-    - cron: "0 */6 * * *" #every 6 hours
+    - cron: "0 */6 * * *"
+
+  # allows to manually run the job at any time
   workflow_dispatch:
 
   # run on every push on the master branch
